--- a/AADF/aboutuus.css
+++ b/AADF/aboutuus.css
@@ -17,6 +17,7 @@
   padding: 0 40px;
   box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.2);
 }
+
 .header .burger-menu {
   display: none;
   cursor: pointer;
@@ -129,7 +130,7 @@
   align-items: center;
 }
 
-.hero-text h1 {
+.hero-text h2 {
   display: flex;
   align-items: center;
   padding-left: 20px;
@@ -266,7 +267,7 @@ footer {
     display: block;
   }
 
-  .hero-area h1 {
+  .hero-text h2 {
     font-size: 40px;
   }
 
@@ -276,8 +277,16 @@ footer {
 }
 /* MOBILE */
 @media (max-width: 425px) {
+  .hero-area{
+    height: 200px;
+  }
+  
   .hero-area img {
     display: none;
+  }
+
+  .hero-text h2 {
+    font-size: 40px;
   }
 
   .logo-footer {
